# SDG6-Tracker

./: .gitignore  README.md  gitignore  pyproject.toml
data/: inference_summary.csv  no_survey_country_results.csv  prepare_datasets.py
data/meta_pop_data/: build_infer_summary.py
notebooks/: africa_sewage_access.csv  africa_water_access.csv  figures.ipynb  model.ipynb  no_survey_population_coverage_cdf_points.csv  no_survey_population_coverage_summary.csv  processing.ipynb  stats.ipynb  urban_rural_split_analysis.ipynb
outputs/reports/: dino_family_auroc_pws_sws.md
outputs/tables/: dino_family_auroc_pws_sws.csv  nigeria_access_hotspots.csv  nigeria_access_hotspots_q90_q10.csv  no_survey_country_results.csv  no_survey_population_coverage_cdf_points.csv  no_survey_population_coverage_summary.csv
scripts/: README.md  count_unique_countries.py  dino.sbatch  dino_pt.sbatch  dino_training.sbatch  dinov2.sbatch  dinov2_infer.sbatch  dinov2_pt.sbatch  dinov3.sbatch  dinov3_knn.sbatch  galileo.sbatch  gee_export_tiles.sbatch  knn_eval.py  plot_nigeria_access_hotspots.py  plot_no_survey_population_cdf.py  prithvi.sbatch  run_dinov3_knn.py  run_dinov3_knn_hw.py  train_dino.py  train_dinov2.py  train_dinov3.py
scripts/analysis/: README.md  compute_dino_family_auroc.py  count_unique_countries.py  figures.py  plot_nigeria_access_hotspots.py  plot_no_survey_population_cdf.py  stats.py  urban_rural_split_analysis.py
scripts/configs/: dino.yaml  dino_pt.yaml  dinov2.yaml  dinov2_infer.yaml  dinov2_pt.yaml  dinov3.yaml  galileo.yaml  gee_export.yaml  gee_export_tiles.yaml  prithvi.yaml  sat_vit.yaml
scripts/dino/: dino_inference.sbatch  dino_predict.sbatch  dino_training.sbatch
scripts/dinov3/: knn_eval_dinov3.sbatch  knn_eval_dinov3_hparam.sbatch  knn_eval_dinov3_hw.sbatch  pretrain_dinov3.sbatch
scripts/galileo/: knn_eval_galileo.sbatch
scripts/slurm/: dino.sbatch  (+8 more)
src/dino/: __init__.py  pyproject.toml
src/dino/dino.egg-info/: PKG-INFO  SOURCES.txt
(+37 files in other folders)
