[project]
name = "sdg6-tracker"
version = "0.1.0"
description = "Deep learning utilities for SDG6 water/sewage access predictions."
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.3.0",
    "torchmetrics>=1.8.2",
    "termcolor>=3.1.0",
    "timm>=1.0.22",
    "transformers>=4.56.0",
]

[tool.uv]
package = false
dev-dependencies = []
