[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dino"
version = "0.0.0"
description = "Local vendored copy of facebookresearch/dino."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[tool.setuptools]
packages = ["dino"]
package-dir = { "dino" = "." }
